updated AUTHORS for BBc-2.

--- a/rfid-logistics/AUTHORS
+++ b/rfid-logistics/AUTHORS
@@ -1,7 +1,8 @@
-BBc-1 was originally created in late 2017 by Beyond Blockchain Inc. in Tokyo, Japan.
+BBc-2 succeeds BBc-1 originally created in late 2017 by Beyond Blockchain Inc.
+in Tokyo, Japan.
 
 Here is an inevitably incomplete list of MUCH-APPRECIATED CONTRIBUTORS --
 people who have submitted patches, reported bugs, added translations, helped
-answer newbie questions, and generally made BBc-1 that much better:
+answer newbie questions, and generally made BBc-2 that much better:
 
     Kenji Saito        <ks91@beyond-blockchain.org>
